gccida/g0/life_analysis
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/life_analysis/src/flow.c:880:24: error: use of undeclared identifier 'eliminables_7'
elim_reg_set |= 1LL << eliminables_7[i].from; 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/life_analysis/src/obj/flow.o] Error 1
